Pull up following revision(s) (requested by tsutsui in ticket #1407): 	sys/arch/mips/mips/in_cksum.c: revision 1.14 Fix wrong checksum calculations of 32 bit unaligned two byte payloads. Analyzed in PR port-mips/43882, but applied slightly different patch. Also put some changes for readability. Note netbsd-5 doesn't use this MD version but netbsd-4 needs a pullup. (though it's unclear if it's really faster even on modern aggressive gcc4)