sys/arch/mips/mips/in_cksum.c
@@ -1,4 +1,4 @@
-/* $NetBSD: in_cksum.c,v 1.12 2006/03/25 00:34:23 matt Exp $ */
+/* $NetBSD: in_cksum.c,v 1.12.12.1 2010/10/12 10:13:12 bouyer Exp $ */
 
 /*
  * Copyright (c) 1993 Regents of the University of California.
@@ -42,7 +42,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: in_cksum.c,v 1.12 2006/03/25 00:34:23 matt Exp $");
+__KERNEL_RCSID(0, "$NetBSD: in_cksum.c,v 1.12.12.1 2010/10/12 10:13:12 bouyer Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -57,11 +57,10 @@ __KERNEL_RCSID(0, "$NetBSD: in_cksum.c,v 1.12 2006/03/25 00:34:23 matt Exp $");
 #include <machine/endian.h>
 
 union memptr {
-	unsigned int *i;
-	unsigned long *l;
-	unsigned long u;
-	unsigned short *s;
-	unsigned char *c;
+	uint32_t *l;
+	uintptr_t u;
+	uint16_t *s;
+	uint8_t *c;
 };
 
 static inline uint32_t fastsum(union memptr, int, unsigned int, int);
@@ -84,10 +83,6 @@ fastsum(union memptr buf, int n, unsigned int oldsum, int odd_aligned)
 
 	/* Align to 32 bits. */
 	if (buf.u & 0x3) {
-		/* Skip to the end for very small mbufs */
-		if (n < 3)
-			goto verylittleleft;
-
 		/*
 	         * 16-bit-align.
 		 * If buf is odd-byte-aligned, add the byte and toggle
@@ -108,6 +103,9 @@ fastsum(union memptr buf, int n, unsigned int oldsum, int odd_aligned)
 			n -= 1;
 			odd_aligned = !odd_aligned;
 		}
+		/* Skip to the end for very small mbufs */
+		if (n <= 2)
+			goto postunaligned;
 
 		/* 32-bit-align */
 		if (buf.u & 0x2) {
@@ -199,7 +197,7 @@ fastsum(union memptr buf, int n, unsigned int oldsum, int odd_aligned)
 
  notmuchleft:
 	high = hilo = 0;
-	while (n >= 4) {
+	while (n >= sizeof(uint32_t)) {
 		w0 = *(buf.l++);
 		hilo += w0;
 		high += w0 >> 16;
@@ -209,19 +207,21 @@ fastsum(union memptr buf, int n, unsigned int oldsum, int odd_aligned)
 	sum += hilo;
 	sum += high;
 
-	while (n > 1) {
-		n -= sizeof(*buf.s);
+ postunaligned:
+	/* handle post 32bit unaligned payloads */
+	if (n >= sizeof(uint16_t)) {
 		sum += *(buf.s++);
+		n -= sizeof(uint16_t);
 	}
 
- verylittleleft:
-	/* handle trailing byte and short (possibly) unaligned payloads */
-	while (n-- > 0) {
+	/* handle a trailing odd byte */
+	if (n > 0) {
 #if BYTE_ORDER == BIG_ENDIAN
 		sum += *(buf.c++) << 8;
 #else
 		sum += *(buf.c++);
 #endif
+		n = 0;
 	}
 
 	/*
